tests/tldk/error/error-tldk-test-error26_linux.pkt
0   socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
+0  setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0

+0  bind(3, ..., ...) = 0
+0  listen(3, 1) = 0

+0  < S 0:0(0) win 32792
+0 ~ +1  > S. 0:0(0) ack 1 <...>

+.1 < . 1:1(0) ack 1 win 32792
+0.2 accept(3, ..., ...) = 4
+0.1 fcntl(4, F_SETFL, O_RDWR|O_NONBLOCK) = 0

+0 < . 1:1001(1000) ack 1 win 27510 
+0  > . 1:1(0) ack 1001

+0.1 read(4, ..., 500) =  500
+0.1 write(4, ..., 2623) =  2623
+0.1  > P. 1:2624(2623) ack 1001

+0 close(4) = 0
+0 ~ +1  > R. 2624:2624(0) ack 1001
